fix cropping

--- a/src/app/components/estimation/estimation.component.scss
+++ b/src/app/components/estimation/estimation.component.scss
@@ -59,58 +59,28 @@
 
       .cropped {
         overflow: hidden;
+        width: 335px;
         border-radius: 15px;
 
         &-initial {
           @extend .cropped;
-          width: 335px;
           height: 335px;
 
           img {
-            margin: -27px 0px 0px -93px;
-            width: 520px;
+            margin: -27px 0px 0px -92px;
+            width: 519px
           }
         }
 
         &-result {
           @extend .cropped;
-          width: 303px;
           height: 303px;
 
           img {
-            margin: -31px 0px 0px -53px;
-            width: 486px;
+            margin: -33px 0px 0px -58px;
+            width: 488px;
           }
         }
-      }
-    }
-
-    &-result {
-      position: relative;
-      background: rgb(3, 55, 120);
-      background: linear-gradient(180deg, rgba(3, 55, 120, 1) 0%, rgba(255, 255, 255, 1) 100%);
-      border-radius: 20px;
-      width: 13px;
-      height: 265px;
-
-      &-container {
-        width: 32px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        button {
-          width: 20px;
-        }
-      }
-
-      &-indicator {
-        box-sizing: border-box;
-        position: absolute;
-        width: 25px;
-        height: 25px;
-        left: 5px;
-        top: calc((5 - var(--correctValue)) * 60px);
       }
     }
   }
@@ -144,6 +114,10 @@
         transform: rotate(45deg);
         clear: both;
       }
+    }
+
+    button {
+      width: 20px;
     }
   }
 
